--- a/Análise_Dados_Historicos_Anuais_INMET/Analise_INMET_Natal_RN_2021.ipynb
+++ b/Análise_Dados_Historicos_Anuais_INMET/Analise_INMET_Natal_RN_2021.ipynb
@@ -74,12 +74,12 @@
       "cell_type": "code",
       "source": [
         "dados = 'https://raw.githubusercontent.com/Gus-1003/Meteorologia_Estudos_Dados/main/An%C3%A1lise_Dados_Historicos_Anuais_INMET/Ano2021/NATAL%20(A304)_2021-01-01_2021-12-31.csv'\n",
-        "dataframe = pd.read_csv(dados, delimiter=\";\")"
+        "dataframe = pd.read_csv(dados, delimiter=\";\", quotechar='\"')"
       ],
       "metadata": {
         "id": "YbqdoO0qKBWN"
       },
-      "execution_count": 2,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -112,9 +112,9 @@
           "height": 890
         },
         "id": "GBPCEoaCcNnF",
-        "outputId": "d5ed8f01-00a8-468d-ef21-bdc47ddfb5e8"
+        "outputId": "5a15a294-e27a-497f-bd19-c221397b1575"
       },
-      "execution_count": 3,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +257,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f075479a-2798-413d-8952-2c65d2f05ac4\">\n",
+              "  <div id=\"df-16016007-f4e7-496a-a27e-05a53e4fde45\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -852,7 +852,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f075479a-2798-413d-8952-2c65d2f05ac4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-16016007-f4e7-496a-a27e-05a53e4fde45')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -903,12 +903,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f075479a-2798-413d-8952-2c65d2f05ac4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-16016007-f4e7-496a-a27e-05a53e4fde45 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f075479a-2798-413d-8952-2c65d2f05ac4');\n",
+              "          const element = document.querySelector('#df-16016007-f4e7-496a-a27e-05a53e4fde45');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -931,7 +931,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 27
         }
       ]
     },
@@ -943,12 +943,13 @@
       ],
       "metadata": {
         "id": "4Ya9jMMg3EfI",
-        "outputId": "41088070-a0a8-4706-f361-7af8067f55b3",
+        "outputId": "95fb3c78-6362-4e77-83aa-efa586c31e25",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         }
       },
-      "execution_count": 4,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -958,7 +959,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 28
         }
       ]
     },
@@ -993,12 +994,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "u0cumctGazLP",
-        "outputId": "ee12f69a-748c-41b1-d6e8-00f50252f9d4"
+        "outputId": "251529ff-0afe-4b40-8a37-38263cf103f4"
       },
-      "execution_count": 5,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1060,7 +1062,7 @@
           "height": 297
         },
         "id": "joefPDW-LIsc",
-        "outputId": "d2f5d243-7a4b-4283-9b3e-c2e91227d93d"
+        "outputId": "931dc79d-d335-4a0f-d79c-55cdf8714581"
       },
       "execution_count": 6,
       "outputs": [
@@ -1080,7 +1082,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f438d9b4-accd-4b57-8ca6-1fbd7635b3a3\">\n",
+              "  <div id=\"df-7eb8a0eb-3dc9-4ab4-97b9-b67bb2a7c0d3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1139,7 +1141,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f438d9b4-accd-4b57-8ca6-1fbd7635b3a3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7eb8a0eb-3dc9-4ab4-97b9-b67bb2a7c0d3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1190,12 +1192,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f438d9b4-accd-4b57-8ca6-1fbd7635b3a3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7eb8a0eb-3dc9-4ab4-97b9-b67bb2a7c0d3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f438d9b4-accd-4b57-8ca6-1fbd7635b3a3');\n",
+              "          const element = document.querySelector('#df-7eb8a0eb-3dc9-4ab4-97b9-b67bb2a7c0d3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1252,7 +1254,7 @@
           "height": 239
         },
         "id": "k_2xbwifcdTt",
-        "outputId": "76ec9a2d-43f7-4f0b-bef6-911c41bb95df"
+        "outputId": "b9bb14f8-378e-40cf-b2eb-90403d097cd2"
       },
       "execution_count": 7,
       "outputs": [
@@ -1292,7 +1294,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8cca1e94-00f8-450b-aa75-b490d51ec88c\">\n",
+              "  <div id=\"df-373d51ad-9ef6-4a1f-ab0a-151b2dba63af\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1420,7 +1422,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8cca1e94-00f8-450b-aa75-b490d51ec88c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-373d51ad-9ef6-4a1f-ab0a-151b2dba63af')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1471,12 +1473,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8cca1e94-00f8-450b-aa75-b490d51ec88c button.colab-df-convert');\n",
+              "          document.querySelector('#df-373d51ad-9ef6-4a1f-ab0a-151b2dba63af button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8cca1e94-00f8-450b-aa75-b490d51ec88c');\n",
+              "          const element = document.querySelector('#df-373d51ad-9ef6-4a1f-ab0a-151b2dba63af');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1571,10 +1573,11 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "FcOdS1pIbg39",
-        "outputId": "8b0b9c56-efb1-4340-dbcd-03c36d309c6d"
+        "outputId": "41bc0026-b6e2-43ef-aaad-41789367fcce"
       },
       "execution_count": 8,
       "outputs": [
@@ -1630,10 +1633,11 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "3bt4cjzWgfkK",
-        "outputId": "bf707420-cfa9-4887-8edc-59f342b6135e"
+        "outputId": "048179aa-7ee1-46ca-ab48-8fc8b9c08c5b"
       },
       "execution_count": 10,
       "outputs": [
@@ -1671,26 +1675,16 @@
     {
       "cell_type": "code",
       "source": [
-        "dataframe = dataframe.drop(columns=['Hora (UTC)'])"
-      ],
-      "metadata": {
-        "id": "-P-0cGLhj04J"
-      },
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#mostra tipo de dados das colunas \n",
         "dataframe.info()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "z8TU9O1Cgq7S",
-        "outputId": "28aa8a77-f9fe-414b-859f-eb0983638cee"
+        "outputId": "1870b225-8c6c-4278-b8c1-13e4478d745e"
       },
       "execution_count": 12,
       "outputs": [
@@ -1744,10 +1738,11 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "BLQWeyA3cvx0",
-        "outputId": "ae55f3c9-7c23-406c-deb6-9403f61db631"
+        "outputId": "b053616e-b2ec-4e20-86da-9ec12367c886"
       },
       "execution_count": 13,
       "outputs": [
@@ -1773,10 +1768,11 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "HmqRDxqfc8WV",
-        "outputId": "8d021fe9-8472-4277-f9ac-f96faa341304"
+        "outputId": "f3f935c8-160d-46e6-9185-4cc319016d26"
       },
       "execution_count": 14,
       "outputs": [
@@ -1804,6 +1800,27 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Tranformando Object's em float's:"
+      ],
+      "metadata": {
+        "id": "qVzRDMOjdpPb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in dataframe.collums:\n",
+        "  for y in dataframe.:"
+      ],
+      "metadata": {
+        "id": "lZmatyEOI3VX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Geração de datasets de atributos especificos:"
       ],
       "metadata": {
@@ -1822,7 +1839,7 @@
       "metadata": {
         "id": "JpqX06jVlzsR"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1833,12 +1850,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "XOP2eQl8jKdh",
-        "outputId": "e705030b-acd8-4f4a-e9ce-33b08a579f97"
+        "outputId": "7e13f163-9d88-4b05-860d-4008442d3197"
       },
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1886,9 +1904,9 @@
           "height": 678
         },
         "id": "n_Zlk6H8kU95",
-        "outputId": "9ce58115-6af5-494f-f098-11c4df539570"
+        "outputId": "8d38c67b-7134-44eb-eeae-12179a78e426"
       },
-      "execution_count": 23,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
